[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "speny"
version = "0.1.0"
description = "Telegram bot for tracking spending."
license = "MIT"
authors = ["shvixxl <contact@shvix.dev>"]
repository = "https://github.com/shvixxl/speny"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b7"
pydantic = "^1.10.13"
Babel = "^2.13.1"
google-api-python-client = "^2.117.0"
google-auth = "^2.25.2"
google-auth-oauthlib = "^1.1.0"
google-auth-httplib2 = "^0.2.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1"
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.ruff]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle - Error
    "W",   # pycodestyle - Warning
    "C90", # mccabe
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "ICN", # flake8-import-conventions
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PLC", # Pylint - Convention
    "PLE", # Pylint - Error
    "PLR", # Pylint - Refactor
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S"]

[tool.pytest.ini_options]
addopts = [
    "--cov=speny",
    "--cov=tests",
]
